# 42-IRC

./: .gitignore  Makefile  README.md
includes/: Channel.hpp  Client.hpp  CommandParser.hpp  Constants.hpp  Debug.hpp  Server.hpp  ServerMessages.hpp
srcs/: Channel.cpp  Client.cpp  CommandParser.cpp  Debug.cpp  OperatorCommands.cpp  Server.cpp  ServerCommands.cpp  main.cpp  server.cpp
tests/: CMakeLists.txt  IncompleteCmd.sh  LowBandwidth.sh  ManyClients.sh  ModeTests.sh  PASS_NICK_USER_test.sh  PacketLoss.sh  PartialDataReception.sh  fragmented_test.sh  multiple_clients.sh  run_all_error_tests.sh  test_channel.cpp  test_client.cpp  test_command_parser.cpp
tests/Errors/: JOIN_errors.sh  MODE_errors.sh  NICK_errors.sh  PART_errors.sh  PASS_errors.sh  PRIVMSG_errors.sh  QUIT_errors.sh  USER_errors.sh  WHO_errors.sh
